@@ -1,3 +1,9 @@
+2000-01-28  Havoc Pennington  <hp@redhat.com>
+
+	* wrappers/gtk/gconf-client.c
+	(gconf_client_set_global_default_error_handler): New function so
+	gnome-libs can install a Gnomized error dialog
+
 2000-01-27  Havoc Pennington  <hp@pobox.com>
 
 	* wrappers/gtk/gconf-client.c (check_overlap): fix the no-debug
